# opendcad

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.md  summary.md
docs/: language-guide.md
docs/plan/: language-reference.md  phase-0-architecture.md  phase-1-primitives.md  phase-2-face-modeling.md  phase-2b-advanced-modeling.md  phase-2b-api-reference.md  phase-3-language.md  phase-4-parser.md  phase-5-viewer.md  roadmap.md
docs/plans/: 2026-03-06-viewer-overhaul-design.md  2026-03-06-viewer-overhaul.md
examples/: assembly_export.dcad  battery.dcad  color_material_test.dcad  complete_demo.dcad  face_modeling.dcad  function_test.dcad  holes_and_patterns.dcad  import_test.dcad  language_test.dcad  list_test.dcad  pattern_demo.dcad  phase1_test.dcad  revolve_feature.dcad
examples/lib/: fasteners.dcad
grammar/: OpenDCAD.g4
lib/std/connectors/: audio_35mm.dcad  barrel_jack.dcad  db9.dcad  ethernet_rj45.dcad  hdmi.dcad  iec_c14.dcad  sd_card.dcad  usb_a.dcad  usb_c.dcad  usb_micro.dcad
lib/std/controls/: led_bezel.dcad  potentiometer.dcad  pushbutton_round.dcad  rocker_switch.dcad  toggle_switch.dcad
lib/std/displays/: custom_lcd.dcad  lcd_1602.dcad  oled_096.dcad  oled_130.dcad  tft_28.dcad
lib/std/fasteners/: fasteners.dcad
src/: Debug.h  Listener.h  Shape.cpp  Shape.h  main.cpp  opendcad.cpp  output.h
src/cli/: CliOptions.h
src/core/: Debug.h  Error.h  Timer.cpp  Timer.h  output.cpp
src/export/: ManifestExporter.cpp  ManifestExporter.h  ShapeHealer.h  StepExporter.cpp  StepExporter.h  StlExporter.cpp  StlExporter.h
src/geometry/: Color.h  EdgeSelector.cpp  EdgeSelector.h  FaceRef.cpp  FaceRef.h  FaceSelector.cpp  FaceSelector.h  Shape.cpp  Shape.h  ShapeRegistry.cpp  ShapeRegistry.h  Sketch.cpp  Sketch.h  Workplane.cpp  Workplane.h
src/parser/: Environment.cpp  Environment.h  Evaluator.cpp  Evaluator.h  FunctionDef.h  Value.cpp  Value.h
src/viewer/: Camera.cpp  Camera.h  EnvironmentMap.cpp  EnvironmentMap.h  FileWatcher.cpp  FileWatcher.h  GridMesh.cpp  GridMesh.h  RenderObject.h  RenderScene.cpp  RenderScene.h  Renderer.cpp  Renderer.h  Screenshot.cpp  Screenshot.h  ShaderProgram.cpp  ShaderProgram.h  StepLoader.cpp  StepLoader.h  Tessellator.cpp  Tessellator.h  ViewerApp.cpp  ViewerApp.h  viewer_main.cpp
src/viewer/ui/: ImGuiSetup.cpp  ImGuiSetup.h  LayerPanel.cpp  LayerPanel.h  MaterialPanel.cpp  MaterialPanel.h  MenuBar.cpp  MenuBar.h  ObjectPanel.cpp  ObjectPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  ViewportOverlay.cpp  ViewportOverlay.h
tests/: test_cli.cpp  test_environment.cpp  test_evaluator.cpp  test_face_modeling.cpp  test_metadata_export.cpp  test_shape.cpp  test_shape_registry.cpp  test_tessellator.cpp  test_value.cpp
viewer/: viewer_main.cpp
